Revision history for MooseX-Traits-Pluggable

0.05  2009-07-17 20:15:34
    - Add support for composing MooseX::MethodAttributes roles into
      anonymous classes correctly.

0.04  2009-06-09 18:02:59
    - support single trait scalar in new_with_traits

0.03  2009-06-02 10:30:44
    - fix warnings from "make test"

0.02  2009-06-02 09:57:57
    - added _traits and _resolved_traits attributes

0.01  2009-06-02 07:38:27
    - inital release