@@ -1,5 +1,8 @@
 Revision history for MooseX-Traits-Pluggable
 
+   - Work correctly with positional parameters followed by a hashref
+     passed to new_with_traits.
+
 0.05  2009-07-17 20:15:34
     - Add support for composing MooseX::MethodAttributes roles into
       anonymous classes correctly.
